Fix missing space in greeting text on mobile

--- a/web/src/components/Chat/ChatInterface.css
+++ b/web/src/components/Chat/ChatInterface.css
@@ -172,8 +172,8 @@
 }
 
 .welcome-send-btn svg {
-  margin-right: 1px;
-  margin-top: 1px;
+  margin-right: 3px;
+  margin-top: 2px;
   height: 24px;
   width: 24px;
 }
